conforming to database schema
