# BackEnd/model/match/match.go
@@ -1,6 +1,0 @@
-package match
-
-type Match struct {
-	WinnerID int `json:"winnerId"`
-	LoserID  int `json:"loserId"`
-}
